--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">2T2019-Localizacion-de-guardias-para-denuncias</string>
+    <string name="txt_mensaje">Inicio de sesion con Google</string>
+    <string name="img_logo">logo_firebase</string>
+    <string name="btn_iniciarSesion">Iniciar Sesion</string>
 </resources>
