Se agrega y verifica inicio y cierro de sesion

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,9 @@
     <string name="txt_mensaje">Inicio de sesion con Google</string>
     <string name="img_logo">logo_firebase</string>
     <string name="btn_iniciarSesion">Iniciar Sesion</string>
+    <string name="img_perfil">imagen_perfil</string>
+    <string name="txt_ID">ID</string>
+    <string name="txt_nombre_usuario">Nombre de usuario</string>
+    <string name="txt_correo">Correo</string>
+    <string name="btn_cerrarSesion">Cerrar Sesion</string>
 </resources>
