--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="txtEmail">Email</string>
     <string name="txtPassword">Contraseña</string>
     <string name="imgRetornar">Regresar</string>
+    <string name="txtAppObj">Solución efectiva para denunciar delitos!</string>
 </resources>
