Agrego cambio de pantalla desde RegistroActivity hacia LoginActivity.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,6 @@
     <string name="txtMensaje">Seleccione el tipo de usuario a crear:</string>
     <string name="txtMensaje2">Ingrese sus datos a continuación:</string>
     <string name="btnRegistrarse">Registrarse</string>
+    <string name="txtMensajeLogin">Ya posees una cuenta?</string>
+    <string name="txtIniciaSesion">Inicia sesión</string>
 </resources>
