--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">2T2019-Localizacion-de-guardias-para-denuncias</string>
+    <string name="action_settings">Settings</string>
     <string name="text_nuevoPorAqui">Eres nuevo por aqui?</string>
     <string name="txt_registro">Registrate</string>
     <string name="txt_bienvenida">Bienvenido!</string>
@@ -22,4 +23,6 @@
     <string name="btnRegistrarse">Registrarse</string>
     <string name="txtMensajeLogin">Ya posees una cuenta?</string>
     <string name="txtIniciaSesion">Inicia sesión</string>
+    <string name="title_activity_opciones_app">OpcionesApp</string>
+    <string name="title_activity_dashboard">DashboardActivity</string>
 </resources>
