--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,5 @@
     <string name="txtIniciaSesion">Inicia sesión</string>
     <string name="title_activity_opciones_app">OpcionesApp</string>
     <string name="title_activity_dashboard">DashboardActivity</string>
+    <string name="title_activity_maps">Map</string>
 </resources>
