--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,6 +32,12 @@
     <string name="txtPerfilEmail">Email</string>
     <string name="txtPerfilTelefono">Teléfono</string>
     <string name="txtPerfilCuenta">Tipo de cuenta</string>
+    <string name="txtPerfilID">ID</string>
+    <string name="txtBtnRobo">Robo</string>
+    <string name="txtBtnAgresion">Agresion</string>
+    <string name="txtBtnDrogas">Venta de drogas</string>
+    <string name="txtBtnOtro">Otro delito</string>
+    <string name="txtSeccionDenuncias">Sección de delitos</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
